add update handler
