# docs/swagger.json
@@ -15,7 +15,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "用户"
                 ],
                 "summary": "获取用户列表",
                 "operationId": "GetUserList",
@@ -95,7 +95,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "用户"
                 ],
                 "summary": "创建用户",
                 "operationId": "CreateUser",
@@ -109,7 +109,7 @@
                     },
                     {
                         "description": "用户",
-                        "name": "user",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -154,7 +154,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "用户"
                 ],
                 "summary": "获取用户详情",
                 "operationId": "GetUserDetail",
@@ -200,6 +200,58 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "更新用户",
+                "operationId": "UpdateUser",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cjwt-token\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "请求体",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_handler_http.ReqUpdateUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_handler_http.RspBase"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_handler_http.RspBase"
+                        }
+                    }
+                }
             }
         }
     },
@@ -209,6 +261,21 @@
             "required": [
                 "gender"
             ],
+            "properties": {
+                "gender": {
+                    "description": "性别",
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "name": {
+                    "description": "用户名",
+                    "type": "string",
+                    "maxLength": 64
+                }
+            }
+        },
+        "internal_handler_http.ReqUpdateUser": {
+            "type": "object",
             "properties": {
                 "gender": {
                     "description": "性别",
@@ -253,7 +320,7 @@
                     "type": "integer"
                 },
                 "created_by": {
-                    "description": "创建者",
+                    "description": "创建者 (nullable)",
                     "type": "integer"
                 },
                 "gender": {
@@ -264,7 +331,7 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "用户名",
+                    "description": "用户名 (nullable)",
                     "type": "string"
                 },
                 "updated_at": {
@@ -272,7 +339,7 @@
                     "type": "integer"
                 },
                 "updated_by": {
-                    "description": "更新者",
+                    "description": "更新者 (nullable)",
                     "type": "integer"
                 }
             }
@@ -304,7 +371,7 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "用户名",
+                    "description": "用户名 (nullable)",
                     "type": "string"
                 }
             }
