# internal/handler/http/user.go
@@ -1,14 +1,14 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.0.8-EE
+// Version: v1.0.15-EE
 // Author: meta-egg
-// Generated at: 2023-04-23 20:35
+// Generated at: 2023-04-25 22:58
 package handler
 
 import (
 	"meta-egg-layout/gen/model"
-	"meta-egg-layout/internal/domain"
+	domain "meta-egg-layout/internal/domain"
 	"meta-egg-layout/internal/domain/option"
 
 	jgstr "github.com/Jinglever/go-string"
@@ -19,11 +19,11 @@ import (
 // 用户详情
 type UserDetail struct {
 	Id        uint64  `json:"id"`         //
-	Name      *string `json:"name"`       // 用户名
+	Name      *string `json:"name"`       // 用户名 (nullable)
 	Gender    uint64  `json:"gender"`     // 性别
-	CreatedBy *uint64 `json:"created_by"` // 创建者
+	CreatedBy *uint64 `json:"created_by"` // 创建者 (nullable)
 	CreatedAt int64   `json:"created_at"` // 创建时间
-	UpdatedBy *uint64 `json:"updated_by"` // 更新者
+	UpdatedBy *uint64 `json:"updated_by"` // 更新者 (nullable)
 	UpdatedAt int64   `json:"updated_at"` // 更新时间
 }
 
@@ -42,17 +42,16 @@ func newUserDetailFromModel(mUser *model.User) UserDetail {
 type ReqCreateUser struct {
 	Name   *string `json:"name" binding:"omitempty,max=64"` // 用户名
 	Gender uint64  `json:"gender" binding:"required,gte=1"` // 性别
-
 }
 
 //	@Id			CreateUser
-//	@Tags		User
+//	@Tags		用户
 //	@Summary	创建用户
 //	@Description
 //	@Accept		json
 //	@Produce	json
 //	@Param		Authorization	header		string			true	"Bearer <jwt-token>"
-//	@Param		user			body		ReqCreateUser	true	"用户"
+//	@Param		body			body		ReqCreateUser	true	"用户"
 //	@Success	200				{object}	RspData{data=UserDetail}
 //	@Failure	400				{object}	RspBase
 //	@Router		/v1/users [post]
@@ -77,7 +76,7 @@ func (h *Handler) CreateUser(c *gin.Context) {
 }
 
 //	@Id			GetUserDetail
-//	@Tags		User
+//	@Tags		用户
 //	@Summary	获取用户详情
 //	@Description
 //	@Accept		json
@@ -101,7 +100,7 @@ func (h *Handler) GetUserDetail(c *gin.Context) {
 // 用户列表信息
 type UserListInfo struct {
 	Id     uint64  `json:"id"`     //
-	Name   *string `json:"name"`   // 用户名
+	Name   *string `json:"name"`   // 用户名 (nullable)
 	Gender uint64  `json:"gender"` // 性别
 }
 
@@ -127,11 +126,10 @@ type ReqGetUserList struct {
 	// 排序条件
 	OrderBy   *string           `form:"order_by" binding:"omitempty,oneof=id"`         // 排序字段,可选:id
 	OrderType *option.OrderType `form:"order_type" binding:"omitempty,oneof=asc desc"` // 排序类型,默认desc
-
 }
 
 //	@Id			GetUserList
-//	@Tags		User
+//	@Tags		用户
 //	@Summary	获取用户列表
 //	@Description
 //	@Accept		json
@@ -184,4 +182,43 @@ func (h *Handler) GetUserList(c *gin.Context) {
 		List:  list,
 		Total: total,
 	})
+}
+
+type ReqUpdateUser struct {
+	Name   *string `json:"name" binding:"omitempty,max=64"`  // 用户名
+	Gender *uint64 `json:"gender" binding:"omitempty,gte=1"` // 性别
+}
+
+//	@Id			UpdateUser
+//	@Tags		用户
+//	@Summary	更新用户
+//	@Description
+//	@Accept		json
+//	@Produce	json
+//	@Param		Authorization	header		string			true	"Bearer <jwt-token>"
+//	@Param		id				path		int				true	"用户ID"
+//	@Param		body			body		ReqUpdateUser	true	"请求体"
+//	@Success	200				{object}	RspBase
+//	@Failure	400				{object}	RspBase
+//	@Router		/v1/users/{id} [put]
+func (h *Handler) UpdateUser(c *gin.Context) {
+	id := jgstr.UintVal(c.Param("id"))
+	var req ReqUpdateUser
+	err := shouldBind(c, &req)
+	if err != nil {
+		ResponseFail(c, err)
+		return
+	}
+	opt := &domain.UserUpdateOption{
+		Set: &domain.UserSetOption{
+			Name:   req.Name,
+			Gender: req.Gender,
+		},
+	}
+	err = h.DomainUsecase.UpdateUser(c.Request.Context(), id, opt)
+	if err != nil {
+		ResponseFail(c, err)
+		return
+	}
+	ResponseSuccess(c, nil)
 }
