# internal/server/http/router.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.0.4-EE
+// Version: v1.0.15-EE
 // Author: meta-egg
-// Generated at: 2023-04-22 00:40
+// Generated at: 2023-04-25 22:58
 package server
 
 import (
@@ -25,6 +25,7 @@ func (s *Server) initRouter() {
 	authGroup.POST("/users", handler.CreateUser)
 	authGroup.GET("/users/:id", handler.GetUserDetail)
 	authGroup.GET("/users", handler.GetUserList)
+	authGroup.PUT("/users/:id", handler.UpdateUser)
 
 	s.Router = router
 }
